--- a/reverb-rest/pom.xml
+++ b/reverb-rest/pom.xml
@@ -1,22 +1,23 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.mach6</groupId>
-    <artifactId>reverb-parent</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <artifactId>reverb-rest</artifactId>
-  <packaging>war</packaging>
-  <name>reverb-rest</name>
-  <description>restful services for reverb</description>
-  
-  <dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.mach6</groupId>
+        <artifactId>reverb-parent</artifactId>
+        <version>0.0.2-SNAPSHOT</version>
+    </parent>
+    <artifactId>reverb-rest</artifactId>
+    <packaging>war</packaging>
+    <name>reverb-rest</name>
+    <description>restful services for reverb</description>
+
+    <dependencies>
         <dependency>
             <groupId>org.mach6</groupId>
             <artifactId>reverb-core</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>0.0.2-SNAPSHOT</version>
         </dependency>
-  
+
         <!-- 3rd party Dependencies -->
         <dependency>
             <groupId>com.sun.jersey</groupId>
@@ -38,14 +39,14 @@
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
             <version>1.12</version>
-        </dependency>       
+        </dependency>
         <!-- MySQL database driver -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.25</version>
         </dependency>
-        
+
         <!-- Additional Test Dependencies -->
         <dependency>
             <groupId>com.sun.jersey</groupId>
@@ -59,5 +60,5 @@
             <version>${jersey.version}</version>
             <scope>test</scope>
         </dependency>
-  </dependencies>
+    </dependencies>
 </project>
